# litSinkNexus

./: .gitignore  Cargo.toml  README.zh_CN.md  build.rs  issue.en.md  issue.md  test.pftrace
.cargo/: config.toml
.github/workflows/: release.yml
locales/: i18n.toml
nexus/: Cargo.toml  build.rs
nexus/.cargo/: config.toml
nexus/i18n/: i18n.toml
nexus/src/: internal.rs  lib.rs  resource.rs
nexus/src/app/: app.rs  config.rs  connection_manager.rs  mod.rs  notify_icon.rs
src/: app.rs  internal.rs  lib.rs  notify_icon.rs
src/app/: app.rs  config.rs  connection_manager.rs  context.rs  mod.rs  notify_icon.rs
wix-package/: .gitignore  Cargo.toml
wix-package/src/: main.rs
wix-package/wix/: .gitignore  directories.wxs  package.wxs  ui.wxs  var.wxi  wix.md  zn-CN.wxl
