[package]
name = "windows-play"
version = "0.1.0"
edition = "2024"
default-run = "main"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.9.2"
rust-i18n = "3.1.5"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
windows = { version = "0.62.2", features = [
    "Devices_Enumeration",
    "Media_Audio",
    "System",
    "UI_Notifications",
    "UI_Popups",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-manifest = "1.5.0"

[package.metadata.i18n]
load-path = "locales"
available-locales = ["en", "zh-CN", "zh-TW"]
fallback = ["zh-CN"]
