[package]
name = "lit_audio_nexus"
description = "LitAudioNexus - A Bluetooth Audio Hub for Windows PC"
authors = ["littrick <littrick@163.com>"]
version = "0.1.0"
edition = "2024"
default-run = "nexus"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
lazy_static = "1.5.0"
rand = "0.9.2"
resvg = "0.45.1"
rust-i18n = "3.1.5"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.9.10"
tracing = { version = "0.1.41", features = ["log", "max_level_debug"] }
tracing-appender = "0.2.4"
tracing-perfetto = "0.1.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
windows = { version = "0.62.2", features = [
    "Devices_Enumeration",
    "Media_Audio",
    "System",
    "UI_Notifications",
    "UI_Popups",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-services = "0.26.1"

[build-dependencies]
embed-manifest = "1.5.0"
image = "0.25.9"
resvg = "0.45.1"
winres = "0.1.12"

[package.metadata.i18n]
load-path = "i18n"
available-locales = ["en", "zh-CN", "zh-TW"]
fallback = ["zh-CN"]
