[workspace]
resolver = "3"
members = ["nexus", "wix-package"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["littrick <github.com/littrick>"]
license = "MIT"
repository = "https://github.com/littrick/litSinkNexus.git"
description = "A Windows sink application for playing audio from Bluetooth (A2DP) sources."
keywords = ["bluetooth", "a2dp", "audio", "sink", "Windows"]
